intTests/test_type_errors/err012.log.good
Loading file "err012.saw"
Type errors:
  err012.saw:12:2-12:17: Monadic bind with the wrong monad; found LLVMSetup but expected TopLevel
  err012.saw:12:2-12:17: This creates the action but does not execute it; if you meant to do that, prefix the expression with return
  err012.saw:12:14-12:17: Type mismatch.
    Mismatch of type constructors. Expected: Int but got <Block>
    err012.saw:12:6-12:9: The type Int arises from this type annotation
    err012.saw:12:2-12:17: The type LLVMSetup Int arises from this type annotation

    Expected: Int
    Found:    LLVMSetup Int

    within "<toplevel>" (err012.saw:12:2-12:17)


FAILED
